==> SmartArduino/WiFiMCU/Platform/vendor/nxp/LPC54xx/MicoDriverUart.c <==
#include "MICORTOS.h"
#include "MICOPlatform.h"
#include "platform.h"
#include "platform_common_config.h"
#include "gpio_irq.h"
#include "chip.h"
#include "board.h"
#include "string.h"
#define UART_RB_SIZE 128
#define LPC_USART       LPC_USART0
#define LPC_IRQNUM      UART0_IRQn
#define LPC_UARTHNDLR   UART0_IRQHandler

OSStatus internal_uart_init( mico_uart_t uart, const mico_uart_config_t* config, ring_buffer_t* optional_rx_buffer )
{
#ifndef NO_MICO_RTOS
  mico_rtos_init_semaphore(&uart_interfaces[uart].tx_complete, 1);
  mico_rtos_init_semaphore(&uart_interfaces[uart].rx_complete, 1);
#else
  uart_interfaces[uart].tx_complete = false;
  uart_interfaces[uart].rx_complete = false;
#endif
  
  MicoMcuPowerSaveConfig(false);

  /* Enable GPIO peripheral clocks for TX and RX pins */
  Chip_SYSCTL_Enable_ASYNC_Syscon(true);
  Chip_Clock_SetAsyncSysconClockDiv(1);	/* divided by 1 */

  /* Configure USART TX Pin */
  /* Configure USART RX Pin */
  Chip_IOCON_PinMuxSet(LPC_IOCON, 0, 0, IOCON_MODE_INACT | IOCON_FUNC1 | IOCON_DIGITAL_EN | IOCON_INPFILT_OFF);
  Chip_IOCON_PinMuxSet(LPC_IOCON, 0, 1, IOCON_MODE_INACT | IOCON_FUNC1 | IOCON_DIGITAL_EN | IOCON_INPFILT_OFF);
  
#ifndef NO_MICO_RTOS
  if(config->flags & UART_WAKEUP_ENABLE){
    current_uart = uart;
    mico_rtos_init_semaphore( &uart_interfaces[uart].sem_wakeup, 1 );
    mico_rtos_create_thread(NULL, MICO_APPLICATION_PRIORITY, "UART_WAKEUP", thread_wakeup, 0x100, &current_uart);
  }
#endif
  /* Enable UART peripheral clock */

  
  /**************************************************************************
  * Initialise LPC54000 UART0 registers
  * NOTE:
  * - Both transmitter and receiver are disabled until usart_enable_transmitter/receiver is called.
  * - Only 1 and 2 stop bits are implemented at the moment.
  **************************************************************************/
  /* Setup UART */
  /* Initialise USART peripheral */
  Chip_UART_Init(LPC_USART0);
  Chip_UART_ConfigData(LPC_USART0, UART_CFG_DATALEN_8 | UART_CFG_PARITY_NONE | UART_CFG_STOPLEN_1);
  Chip_UART_SetBaud(LPC_USART0, 115200);
 
  Chip_UART_Enable(LPC_USART);
  Chip_UART_TXEnable(LPC_USART);
  
  /* Before using the ring buffers, initialize them using the ring
     buffer init function */
//  RingBuffer_Init(&rxring, rxbuff, 1, UART_RB_SIZE);
//  RingBuffer_Init(&txring, txbuff, 1, UART_RB_SIZE);  
   /* Setup ring buffer */
                                           
  /* Enable receive data and line status interrupt */
  Chip_UART_IntEnable(LPC_USART, UART_INTEN_RXRDY);
  Chip_UART_IntDisable(LPC_USART, UART_INTEN_TXRDY);	/* May not be needed */  
    
  /* preemption = 1, sub-priority = 1 */
  NVIC_EnableIRQ(LPC_IRQNUM);
  
#ifndef UART_BUFFERMODE  
/* DMA initialization - enable DMA clocking and reset DMA if needed */
  Chip_DMA_Init(LPC_DMA);
/* Enable DMA controller and use driver provided DMA table for current descriptors */
  Chip_DMA_Enable(LPC_DMA);
  Chip_DMA_SetSRAMBase(LPC_DMA, DMA_ADDR(Chip_DMA_Table));
  Chip_DMA_SetValidChannel(LPC_DMA, DMAREQ_UART0_TX);
  Chip_DMA_SetValidChannel(LPC_DMA, DMAREQ_UART0_RX);
  
  Chip_UART_ClearStatus(LPC_USART0, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
/*
  Chip_DMA_InitChannel( DMAREQ_UART0_RX, DMA_ADDR(&LPC_USART0->RXDATA), DMA_XFERCFG_SRCINC_0, 
                        DMA_ADDR(NULL), DMA_XFERCFG_DSTINC_1, WIDTH_8_BITS,
                        0, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
  Chip_DMA_StartTransfer(DMAREQ_UART0_RX, DMA_XFERCFG_SRCINC_0, DMA_XFERCFG_DSTINC_1, DMA_XFERCFG_WIDTH_8, 0);
  
  Chip_UART_ClearStatus(LPC_USART0, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
  
  Chip_DMA_InitChannel( DMAREQ_UART0_TX, DMA_ADDR(NULL), DMA_XFERCFG_SRCINC_1,
                        DMA_ADDR(&LPC_USART0->TXDATA), DMA_XFERCFG_DSTINC_0, WIDTH_8_BITS,
                        0, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
  Chip_DMA_StartTransfer(DMAREQ_UART0_TX, DMA_XFERCFG_SRCINC_1, DMA_XFERCFG_DSTINC_0, DMA_XFERCFG_WIDTH_8, 0);
*/    
  if (optional_rx_buffer != NULL)
  {
     /* Note that the ring_buffer should've been initialised first */
    uart_interfaces[uart].rx_buffer = optional_rx_buffer;
    uart_interfaces[uart].rx_size   = 0;
    platform_uart_receive_bytes( uart, optional_rx_buffer->buffer, optional_rx_buffer->size, 0 );
  }
   
//  LPC_SYSCON->AHBMATPRIO |= 0x03 << 8;
  /* Enable DMA interrupt */
//  NVIC_SetPriority(DMA_IRQn, 6);
  NVIC_EnableIRQ(DMA_IRQn);
#endif  
  MicoMcuPowerSaveConfig(true);
  printf("LPC54000 uart port init %d \r\n", uart);
  return kNoErr;
}

OSStatus MicoUartFinalize( mico_uart_t uart )
{
  MicoMcuPowerSaveConfig(false);
  
  Chip_UART_DeInit(LPC_USART0);

#ifndef NO_MICO_RTOS
  mico_rtos_deinit_semaphore(&uart_interfaces[uart].rx_complete);
  mico_rtos_deinit_semaphore(&uart_interfaces[uart].tx_complete);
#endif
  
  MicoMcuPowerSaveConfig(true);
  
  return kNoErr;
}

OSStatus MicoUartSend( mico_uart_t uart, const void* data, uint32_t size )
{
#ifdef UART_BUFFERMODE
#ifndef NO_MICO_RTOS
    mico_rtos_lock_mutex(&uart_interfaces[uart].tx_mutex);
#endif

  MicoMcuPowerSaveConfig(false);  
  Chip_UART_SendRB(LPC_USART0, &txring, data, size);
  MicoMcuPowerSaveConfig(true);
#ifndef NO_MICO_RTOS
    mico_rtos_unlock_mutex(&uart_interfaces[uart].tx_mutex);
#endif

  return kNoErr;
#else
  /* Reset DMA transmission result. The result is assigned in interrupt handler */
  uart_interfaces[uart].tx_dma_result = kGeneralErr;
#ifndef NO_MICO_RTOS
  mico_rtos_lock_mutex(&uart_interfaces[uart].tx_mutex);
#endif  
  MicoMcuPowerSaveConfig(false);  
  
//  Chip_UART_ClearStatus(LPC_USART0, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
//
//  Chip_DMA_InitChannel( DMAREQ_UART0_RX, DMA_ADDR(&LPC_USART0->RXDATA), DMA_XFERCFG_SRCINC_0, 
//                        DMA_ADDR(data), DMA_XFERCFG_DSTINC_1, WIDTH_8_BITS,
//                        size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
//  Chip_DMA_StartTransfer(DMAREQ_UART0_RX, DMA_XFERCFG_SRCINC_0, DMA_XFERCFG_DSTINC_1, DMA_XFERCFG_WIDTH_8, size);
  
  Chip_UART_ClearStatus(LPC_USART0, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);
  
  Chip_DMA_InitChannel( DMAREQ_UART0_TX, DMA_ADDR(data), DMA_XFERCFG_SRCINC_1,
                        DMA_ADDR(&LPC_USART0->TXDATA), DMA_XFERCFG_DSTINC_0, WIDTH_8_BITS,
                        size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
  Chip_DMA_StartTransfer(DMAREQ_UART0_TX, DMA_XFERCFG_SRCINC_1, DMA_XFERCFG_DSTINC_0, DMA_XFERCFG_WIDTH_8, size);

#ifndef NO_MICO_RTOS
  mico_rtos_get_semaphore( &uart_interfaces[ uart ].tx_complete, MICO_NEVER_TIMEOUT );
  mico_rtos_unlock_mutex(&uart_interfaces[uart].tx_mutex);

#else 
  while(uart_interfaces[ uart ].tx_complete == false);
  uart_interfaces[ uart ].tx_complete = false;
#endif
  return uart_interfaces[uart].tx_dma_result;
#endif
  
}

static OSStatus platform_uart_receive_bytes( mico_uart_t uart, void* data, uint32_t size, uint32_t timeout )
{
  /* Reset DMA transmission result. The result is assigned in interrupt handler */
  uart_interfaces[uart].rx_dma_result = kGeneralErr;
  
  Chip_UART_ClearStatus(LPC_USART0, UART_STAT_OVERRUNINT|UART_STAT_DELTARXBRK|UART_STAT_FRM_ERRINT|UART_STAT_PAR_ERRINT|UART_STAT_RXNOISEINT);

  Chip_DMA_InitChannel( DMAREQ_UART0_RX, DMA_ADDR(&LPC_USART0->RXDATA), DMA_XFERCFG_SRCINC_0, 
                        DMA_ADDR(data), DMA_XFERCFG_DSTINC_1, WIDTH_8_BITS,
                        size, (DMA_CFG_PERIPHREQEN | DMA_CFG_BURSTPOWER_1 | DMA_CFG_CHPRIORITY(3)));
  Chip_DMA_StartTransfer(DMAREQ_UART0_RX, DMA_XFERCFG_SRCINC_0, DMA_XFERCFG_DSTINC_1, DMA_XFERCFG_WIDTH_8, size);
  
  if ( timeout > 0 )
  {
#ifndef NO_MICO_RTOS
    mico_rtos_get_semaphore( &uart_interfaces[uart].rx_complete, timeout );
#else
    uart_interfaces[uart].rx_complete = false;
    int delay_start = mico_get_time_no_os();
    while(uart_interfaces[uart].rx_complete == false){
      if(mico_get_time_no_os() >= delay_start + timeout && timeout != MICO_NEVER_TIMEOUT){
        break;
      }
    }    
#endif
    return uart_interfaces[uart].rx_dma_result;
  }
  
  
  return kNoErr;
}
